tests/sqllogic/sdb/pg/index/inverted_index_score.test
hash-threshold 100

statement ok
CREATE TABLE docs (id INTEGER PRIMARY KEY, body VARCHAR);


statement ok
INSERT INTO docs VALUES (1, 'the quick brown fox jumps over the lazy dog');


statement count 1
INSERT INTO docs VALUES (2, 'the quick fox');


statement count 1
INSERT INTO docs VALUES (3, 'the lazy dog');


statement ok
CREATE TEXT SEARCH DICTIONARY en(
    template = 'text',
    locale = 'en_US.UTF-8',
    case = 'none',
    stemming = false,
    accent = false,
    frequency = true,
    position = true,
    norm = true
);


statement ok
CREATE INDEX docs_idx ON docs USING inverted(id, body en);


statement ok
VACUUM (UPDATE_INDEXES) docs;


# BM25 scores are non-negative; verify they are returned and > 0
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
id	has_score
1	t
2	t


# TFIDF scores are also > 0
query
SELECT id, TFIDF(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
id	has_score
1	t
2	t


# BM25 with explicit parameters produces non-zero scores
query
SELECT id, BM25(docs_idx.tableoid, 1.2, 0.75) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
id	has_score
1	t
2	t


# BM25 ordering
query
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) DESC, id;
----
id
2
1


query
SELECT id FROM docs_idx WHERE PHRASE(body, 'lazy') ORDER BY BM25(docs_idx.tableoid) DESC, id;
----
id
3
1


# Insert a second segment to exercise multi-segment scoring
statement count 1
INSERT INTO docs VALUES (4, 'the fox runs fast');


statement count 1
INSERT INTO docs VALUES (5, 'a quick brown rabbit and a fox');


statement ok
VACUUM (UPDATE_INDEXES) docs;


# Both segments contribute matching documents; all should have score > 0
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
id	has_score
1	t
2	t
4	t
5	t


# TFIDF also works across multiple segments
query
SELECT id, TFIDF(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
id	has_score
1	t
2	t
4	t
5	t


# Insert enough rows to exceed kScoreBlock (32) matching documents in one batch
statement ok
INSERT INTO docs VALUES (10, 'red fox');


statement count 1
INSERT INTO docs VALUES (11, 'blue fox');


statement count 1
INSERT INTO docs VALUES (12, 'green fox');


statement count 1
INSERT INTO docs VALUES (13, 'white fox');


statement count 1
INSERT INTO docs VALUES (14, 'black fox');


statement count 1
INSERT INTO docs VALUES (15, 'grey fox');

statement count 1
INSERT INTO docs VALUES (16, 'pink fox');


statement count 1
INSERT INTO docs VALUES (17, 'orange fox');


statement count 1
INSERT INTO docs VALUES (18, 'yellow fox');


statement count 1
INSERT INTO docs VALUES (19, 'purple fox');


statement count 1
INSERT INTO docs VALUES (20, 'silver fox');


statement count 1
INSERT INTO docs VALUES (21, 'golden fox');


statement count 1
INSERT INTO docs VALUES (22, 'tiny fox');


statement count 1
INSERT INTO docs VALUES (23, 'big fox');


statement count 1
INSERT INTO docs VALUES (24, 'small fox');


statement count 1
INSERT INTO docs VALUES (25, 'huge fox');


statement count 1
INSERT INTO docs VALUES (26, 'swift fox');


statement count 1
INSERT INTO docs VALUES (27, 'slow fox');


statement count 1
INSERT INTO docs VALUES (28, 'young fox');


statement count 1
INSERT INTO docs VALUES (29, 'old fox');


statement count 1
INSERT INTO docs VALUES (30, 'wild fox');


statement count 1
INSERT INTO docs VALUES (31, 'tame fox');


statement count 1
INSERT INTO docs VALUES (32, 'shy fox');


statement count 1
INSERT INTO docs VALUES (33, 'bold fox');


statement count 1
INSERT INTO docs VALUES (34, 'brave fox');


statement count 1
INSERT INTO docs VALUES (35, 'lazy fox');


statement count 1
INSERT INTO docs VALUES (36, 'clever fox');


statement count 1
INSERT INTO docs VALUES (37, 'sneaky fox');


statement count 1
INSERT INTO docs VALUES (38, 'happy fox');


statement count 1
INSERT INTO docs VALUES (39, 'sad fox');


statement count 1
INSERT INTO docs VALUES (40, 'sly fox');


statement count 1
INSERT INTO docs VALUES (41, 'smart fox');


statement ok
VACUUM (UPDATE_INDEXES) docs;


# More than kScoreBlock (32) docs match 'fox'; all should exist in result
query
SELECT COUNT(*) FROM docs_idx WHERE PHRASE(body, 'fox');
----
count
36


# ORDER BY BM25(docs_idx.tableoid) with >32 results exercises the full-block ScoreBlock path
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3;
----
id	has_score
1	t
2	t
4	t


# BM25(docs_idx.tableoid) can appear multiple times in the same query (SELECT + ORDER BY)
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) ASC LIMIT 3;
----
id	has_score
1	t
5	t
4	t


# BM25(docs_idx.tableoid) in SELECT, WHERE, and ORDER BY simultaneously
query
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs_idx.tableoid) > 0 ORDER BY BM25(docs_idx.tableoid) ASC LIMIT 3;
----
id
1
5
4


# BM25(docs_idx.tableoid) with same explicit params used twice is allowed
query
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs_idx.tableoid, 1.2, 0.75) > 0 ORDER BY BM25(docs_idx.tableoid, 1.2, 0.75) ASC LIMIT 3;
----
id
1
5
4


# Error: BM25(docs_idx.tableoid) and BM25(docs_idx.tableoid) with different params conflict
query error
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid, 1.2, 0.75) DESC, BM25(docs_idx.tableoid, 1.0, 0.5) DESC LIMIT 3;
----
db error: ERROR: Only one scorer function is allowed per inverted index
HINT: Use UNION to combine different score functions for same inverted index


query
SELECT id, BM25(docs_idx.tableoid) FROM docs_idx WHERE PHRASE(body, 'fox') AND TFIDF(docs_idx.tableoid) > 0 LIMIT 3;
----
id	bm25
1	0.019136623
2	0.03676455
4	0.031871427


# UNION ALL: same scorer in each branch — each branch is an independent scoring scope
query
(SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3)
UNION ALL
(SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') ORDER BY id LIMIT 3)
ORDER BY id;
----
id	score
1	0.019136623
1	1.1331773
2	0.03676455
3	2.177017
4	0.031871427
35	2.5718682


# UNION ALL: different scorer types per branch (BM25 vs TFIDF) — each branch is independent
query
(SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
UNION ALL
(SELECT id, TFIDF(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
ORDER BY id;
----
id	score
1	0.019136623
1	2.3513753
2	0.03676455
3	2.3513753


# Subquery: BM25(docs_idx.tableoid) inside subquery, outer references the alias
query
SELECT id, score FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3
) sub ORDER BY id;
----
id	score
10	0.043432634
11	0.043432634
12	0.043432634

query
EXPLAIN SELECT BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) ASC LIMIT 5;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 5          │
│                           │
│         Order By:         │
│  sdb_inverted_index_score │
│             ASC           │
│                           │
│          ~5 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│  sdb_inverted_index_score │
│                           │
│          ~37 rows         │
└───────────────────────────┘



query
EXPLAIN SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│      STREAMING_LIMIT      │
│    ────────────────────   │
│          Limit: 3         │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~37 rows         │
└───────────────────────────┘




query
EXPLAIN SELECT id FROM
(SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'fox'))
ORDER BY score
----
QUERY PLAN
┌───────────────────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #0            │
│                           │
│          ~7 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│           #1 ASC          │
│                           │
│          ~7 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~37 rows         │
└───────────────────────────┘



query error
EXPLAIN SELECT * FROM
(SELECT id FROM docs_idx WHERE PHRASE(body, 'fox'))
ORDER BY BM25(docs_idx.tableoid)
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "unnamed_subquery"



# UNION of two subqueries from same index with outer ORDER BY BM25(docs_idx.tableoid)
query
(SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3)
UNION ALL
(SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'lazy') ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3)
ORDER BY id;
----
id	has_score
1	t
3	t
10	t
11	t
12	t
35	t


# CTE: BM25(docs_idx.tableoid) computed in CTE, outer query uses the pre-computed alias
query
WITH scored AS (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
)
SELECT id, score > 0 AS has_score FROM scored ORDER BY id LIMIT 3;
----
id	has_score
1	t
2	t
4	t


query
SELECT id, score > 0 AS has_score FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
) sub ORDER BY id LIMIT 3;
----
id	has_score
1	t
2	t
4	t


# BM25(docs_idx.tableoid) in outer query references score column from inner subquery
query error
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
) sub ORDER BY id LIMIT 3;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "sub"



# EXPLAIN for TFIDF
query
EXPLAIN SELECT id, TFIDF(docs_idx.tableoid) FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id;
----
QUERY PLAN
┌───────────────────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│      docs_idx.id ASC      │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│  tfidf(with_norms=false)  │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~37 rows         │
└───────────────────────────┘


# OR filter: match either 'fox' or 'lazy', score comes from the matched docs
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') OR PHRASE(body, 'lazy') ORDER BY id LIMIT 5;
----
id	has_score
1	t
2	t
3	t
4	t
5	t


# AND filter: only docs containing both 'fox' and 'lazy' get scored
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') AND PHRASE(body, 'lazy') ORDER BY id;
----
id	has_score
1	t
35	t


# Subquery: wrap scored result, filter by score threshold
query
SELECT id FROM (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id) sub WHERE score > 0 ORDER BY id LIMIT 3;
----
id
1
2
4


# COUNT(*) with scoring filter; score > 0 for all matching docs
query
SELECT COUNT(*) FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs_idx.tableoid) > 0;
----
count
36


# TFIDF with normalize=true produces non-zero scores
query
SELECT id, TFIDF(docs_idx.tableoid, true) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3;
----
id	has_score
1	t
2	t
4	t


# DELETE a doc and VACUUM; it should no longer appear in results
statement count 1
DELETE FROM docs WHERE id = 1;


statement ok
VACUUM (UPDATE_INDEXES) docs;

query
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND id = 1;
----
id


# Deleted doc does not contribute to count
query
SELECT COUNT(*) FROM docs_idx WHERE PHRASE(body, 'fox');
----
count
35


# Score ordering still works after deletion
query
SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3;
----
id	has_score
2	f
4	t
5	t


# Inverted index scan without any filter returns all docs (irs::All)
query
SELECT COUNT(*) FROM docs_idx;
----
count
36


query
SELECT id FROM docs_idx WHERE id = 1;
----
id


query error
SELECT BM25(docs_idx.tableoid);
----
db error: ERROR: Referenced table "docs_idx" not found!


query error
SELECT TFIDF();
----
db error: ERROR: No function matches the given name and argument types 'tfidf()'. You might need to add explicit type casts.
	Candidate functions:
	tfidf(BIGINT) -> FLOAT
	tfidf(BIGINT, BOOLEAN) -> FLOAT


# Error: BM25(docs_idx.tableoid, 1) — must be 0 or 2 arguments
query error
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs_idx.tableoid, 1.2) > 0;
----
db error: ERROR: No function matches the given name and argument types 'bm25(BIGINT, DECIMAL(2,1))'. You might need to add explicit type casts.
	Candidate functions:
	bm25(BIGINT) -> FLOAT
	bm25(BIGINT, DOUBLE, DOUBLE) -> FLOAT


# Error: BM25(docs_idx.tableoid, k1, b, extra) — too many arguments
query error
SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs_idx.tableoid, 1.2, 0.75, 0.1) > 0;
----
db error: ERROR: No function matches the given name and argument types 'bm25(BIGINT, DECIMAL(2,1), DECIMAL(3,2), DECIMAL(2,1))'. You might need to add explicit type casts.
	Candidate functions:
	bm25(BIGINT) -> FLOAT
	bm25(BIGINT, DOUBLE, DOUBLE) -> FLOAT


# Error: BM25(docs.tableoid) with plain table in FROM (no inverted index scan)
query error
SELECT id, BM25(docs.tableoid) FROM docs WHERE id > 0;
----
db error: ERROR: bm25() requires an inverted index scan in the same sub-query


# EXPLAIN for BM25 basic scan
query
EXPLAIN SELECT id, BM25(docs_idx.tableoid) FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 3          │
│                           │
│         Order By:         │
│      docs_idx.id ASC      │
│                           │
│          ~3 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~36 rows         │
└───────────────────────────┘


# EXPLAIN for BM25 with multiple references (SELECT + WHERE + ORDER BY)
query error
EXPLAIN SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') AND BM25(docs2_idx.tableoid) > 0 ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3;
----
db error: ERROR: Referenced table "docs2_idx" not found!
Candidate tables: "docs_idx"



# EXPLAIN for UNION ALL with BM25 (same scorer per branch)
query
EXPLAIN (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
UNION ALL
(SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
ORDER BY id;
----
QUERY PLAN
┌───────────────────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│           id ASC          │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│           UNION           ├──────────────┐
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│      STREAMING_LIMIT      ││      STREAMING_LIMIT      │
│    ────────────────────   ││    ────────────────────   │
│          Limit: 2         ││          Limit: 2         │
│                           ││                           │
│          ~2 rows          ││          ~2 rows          │
└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      │
│    ────────────────────   ││    ────────────────────   │
│        Table: docs        ││        Table: docs        │
│                           ││                           │
│       Materializer:       ││       Materializer:       │
│    rocksdb (point Get)    ││    rocksdb (point Get)    │
│                           ││                           │
│          Filter:          ││          Filter:          │
│ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   ││   <Term:lazy(0, 0); >]]   │
│                           ││                           │
│           Score:          ││           Score:          │
│    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   │
│                           ││                           │
│        Projections:       ││        Projections:       │
│             id            ││             id            │
│  sdb_inverted_index_score ││  sdb_inverted_index_score │
│                           ││                           │
│          ~36 rows         ││          ~36 rows         │
└───────────────────────────┘└───────────────────────────┘


query error
EXPLAIN SELECT id, score, BM25(docs_idx.tableoid) FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3
) sub ORDER BY id;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "sub"


# Error: outer TFIDF() with inner BM25() — scorer type mismatch

query error
EXPLAIN SELECT id, score, TFIDF(docs_idx.tableoid) FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') ORDER BY BM25(docs_idx.tableoid) DESC LIMIT 3
) sub ORDER BY id;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "sub"


# EXPLAIN for CTE with BM25

query
EXPLAIN WITH scored AS (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
)
SELECT id, score > 0 AS has_score FROM scored ORDER BY id LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 3          │
│                           │
│         Order By:         │
│       scored.id ASC       │
│                           │
│          ~3 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│         has_score         │
│                           │
│          ~7 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~36 rows         │
└───────────────────────────┘



query
EXPLAIN SELECT id, score > 0 AS has_score FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
) sub ORDER BY id LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 3          │
│    Order By: sub.id ASC   │
│                           │
│          ~3 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│         has_score         │
│                           │
│          ~7 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│        Table: docs        │
│                           │
│       Materializer:       │
│    rocksdb (point Get)    │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│                           │
│          ~36 rows         │
└───────────────────────────┘


# EXPLAIN for outer BM25() referencing inner subquery score column

query error
EXPLAIN SELECT id, BM25(docs_idx.tableoid) > 0 AS has_score FROM (
  SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')
) sub ORDER BY id LIMIT 3;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "sub"



query
EXPLAIN SELECT * FROM docs_idx;
----
QUERY PLAN
┌───────────────────────────┐
│     IRESEARCH_FULLSCAN    │
│    ────────────────────   │
│        Table: docs        │
│                           │
│        Projections:       │
│             id            │
│            body           │
│                           │
│          ~36 rows         │
└───────────────────────────┘


# --- Multi-table join tests ---
statement ok
CREATE TABLE docs2 (id INTEGER PRIMARY KEY, body VARCHAR);


statement ok
INSERT INTO docs2 VALUES (2, 'the swift fox'), (4, 'a clever fox'), (6, 'the lazy dog');


statement ok
CREATE INDEX docs2_idx ON docs2 USING inverted(id, body en);


statement ok
VACUUM (UPDATE_INDEXES) docs2;


statement ok
CREATE TABLE meta (id INTEGER PRIMARY KEY, tag VARCHAR);


statement ok
INSERT INTO meta VALUES (2, 'interesting'), (4, 'notable'), (5, 'relevant');


# Error: JOIN two inverted indexes with BM25(docs_idx.tableoid) outside — ambiguous which index provides the score
query ??
SELECT docs_idx.id, BM25(docs_idx.tableoid) FROM docs_idx JOIN docs2_idx ON docs_idx.id = docs2_idx.id
WHERE PHRASE(docs_idx.body, 'fox') AND PHRASE(docs2_idx.body, 'fox')
LIMIT 3;
----
id	bm25
2	0
4	0.031871427

# Works: JOIN two inverted indexes, BM25(docs_idx.tableoid) scoped inside each subquery (only one subquery scores)
query
SELECT a.id, a.score > 0 AS has_score FROM
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')) a
  JOIN
  (SELECT id FROM docs2_idx WHERE PHRASE(body, 'fox')) b
  ON a.id = b.id
ORDER BY a.id;
----
id	has_score
2	f
4	t


# Works: JOIN two inverted indexes, same scorer (BM25) scoped inside each subquery
query error
SELECT a.id, a.score > 0 AS has_score, b.score > 0 AS b_has_score FROM
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')) a
  JOIN
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs2_idx WHERE PHRASE(body, 'fox')) b
  ON a.id = b.id
ORDER BY a.id;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "a"




# Works: JOIN two inverted indexes, different scorers (BM25 vs TFIDF) scoped inside each subquery
query error
SELECT a.id, a.score > 0 AS has_score, b.score > 0 AS b_has_score FROM
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')) a
  JOIN
  (SELECT id, TFIDF(docs_idx.tableoid) AS score FROM docs2_idx WHERE PHRASE(body, 'fox')) b
  ON a.id = b.id
ORDER BY a.id;
----
db error: ERROR: Referenced table "docs_idx" not found!
Candidate tables: "a"



# EXPLAIN for join two inverted indexes with scorer scoped inside subquery

query
EXPLAIN SELECT a.id, a.score > 0 AS has_score FROM
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox')) a
  JOIN
  (SELECT id FROM docs2_idx WHERE PHRASE(body, 'fox')) b
  ON a.id = b.id
ORDER BY a.id;
----
QUERY PLAN
┌───────────────────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│          a.id ASC         │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│         has_score         │
│                           │
│          ~2 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         HASH_JOIN         │
│    ────────────────────   │
│      Join Type: INNER     │
│    Conditions: id = id    ├──────────────┐
│                           │              │
│          ~2 rows          │              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      │
│    ────────────────────   ││    ────────────────────   │
│        Table: docs        ││        Table: docs2       │
│                           ││                           │
│       Materializer:       ││       Materializer:       │
│    rocksdb (point Get)    ││    rocksdb (point Get)    │
│                           ││                           │
│          Filter:          ││          Filter:          │
│ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   ││    <Term:fox(0, 0); >]]   │
│                           ││                           │
│           Score:          ││      Projections: id      │
│    bm25(k1=1.2, b=0.75)   ││                           │
│                           ││                           │
│        Projections:       ││                           │
│             id            ││                           │
│  sdb_inverted_index_score ││                           │
│                           ││                           │
│          ~7 rows          ││          ~3 rows          │
└───────────────────────────┘└───────────────────────────┘


# Works: JOIN inverted index with plain table, BM25(docs_idx.tableoid) from inverted scan
query
SELECT docs_idx.id, BM25(docs_idx.tableoid) > 0 AS has_score, meta.tag FROM docs_idx
JOIN meta ON docs_idx.id = meta.id
WHERE PHRASE(docs_idx.body, 'fox')
ORDER BY docs_idx.id;
----
id	has_score	tag
2	f	interesting
4	t	notable
5	t	relevant


# EXPLAIN for join inverted + plain table with BM25()
query
EXPLAIN SELECT docs_idx.id, BM25(docs_idx.tableoid) > 0 AS has_score, meta.tag FROM docs_idx
JOIN meta ON docs_idx.id = meta.id
WHERE PHRASE(docs_idx.body, 'fox')
ORDER BY docs_idx.id;
----
QUERY PLAN
┌───────────────────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│      docs_idx.id ASC      │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│         has_score         │
│            tag            │
│                           │
│          ~7 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         HASH_JOIN         │
│    ────────────────────   │
│      Join Type: INNER     │
│    Conditions: id = id    ├──────────────┐
│                           │              │
│          ~7 rows          │              │
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││   ROCKSDB_TABLE_FULLSCAN  │
│    ────────────────────   ││    ────────────────────   │
│        Table: docs        ││        Table: meta        │
│                           ││                           │
│       Materializer:       ││        Projections:       │
│    rocksdb (point Get)    ││             id            │
│                           ││            tag            │
│          Filter:          ││                           │
│ AND[PHRASE[body(string) = ││                           │
│    <Term:fox(0, 0); >]]   ││                           │
│                           ││                           │
│           Score:          ││                           │
│    bm25(k1=1.2, b=0.75)   ││                           │
│                           ││                           │
│        Projections:       ││                           │
│             id            ││                           │
│  sdb_inverted_index_score ││                           │
│                           ││                           │
│          ~36 rows         ││          ~3 rows          │
└───────────────────────────┘└───────────────────────────┘


query
SELECT docs_idx.id,
       BM25(docs_idx.tableoid) AS left_score,
       BM25(docs2_idx.tableoid) AS right_score,
       BM25(docs_idx.tableoid) <> BM25(docs2_idx.tableoid) AS differs
FROM docs_idx
JOIN docs2_idx ON docs_idx.id = docs2_idx.id
WHERE PHRASE(docs_idx.body, 'fox') AND PHRASE(docs2_idx.body, 'fox')
ORDER BY docs_idx.id;
----
id	left_score	right_score	differs
2	0	0.47<slt:ignore>	t
4	0.031<slt:ignore>	0.47<slt:ignore>	t


statement ok
DROP TABLE docs2;


statement ok
DROP TABLE meta;


# Union tree: each branch is itself a UNION (((fox UNION lazy) UNION ALL (fox UNION lazy)))
query
(
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
UNION ALL
(
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
ORDER BY id LIMIT 6;
----
id	score
2	0
2	0
3	0
3	0
4	0.031871427
4	0.031871427


# EXPLAIN for union tree
query
EXPLAIN (
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
UNION ALL
(
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) AS score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
ORDER BY id LIMIT 6;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 6          │
│      Order By: id ASC     │
│                           │
│          ~6 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│           UNION           ├──────────────┬────────────────────────────┬────────────────────────────┐
└─────────────┬─────────────┘              │                            │                            │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│      STREAMING_LIMIT      ││      STREAMING_LIMIT      ││      STREAMING_LIMIT      ││      STREAMING_LIMIT      │
│    ────────────────────   ││    ────────────────────   ││    ────────────────────   ││    ────────────────────   │
│          Limit: 2         ││          Limit: 2         ││          Limit: 2         ││          Limit: 2         │
│                           ││                           ││                           ││                           │
│          ~2 rows          ││          ~2 rows          ││          ~2 rows          ││          ~2 rows          │
└─────────────┬─────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      │
│    ────────────────────   ││    ────────────────────   ││    ────────────────────   ││    ────────────────────   │
│        Table: docs        ││        Table: docs        ││        Table: docs        ││        Table: docs        │
│                           ││                           ││                           ││                           │
│       Materializer:       ││       Materializer:       ││       Materializer:       ││       Materializer:       │
│    rocksdb (point Get)    ││    rocksdb (point Get)    ││    rocksdb (point Get)    ││    rocksdb (point Get)    │
│                           ││                           ││                           ││                           │
│          Filter:          ││          Filter:          ││          Filter:          ││          Filter:          │
│ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   ││   <Term:lazy(0, 0); >]]   ││    <Term:fox(0, 0); >]]   ││   <Term:lazy(0, 0); >]]   │
│                           ││                           ││                           ││                           │
│           Score:          ││           Score:          ││           Score:          ││           Score:          │
│    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   │
│                           ││                           ││                           ││                           │
│        Projections:       ││        Projections:       ││        Projections:       ││        Projections:       │
│             id            ││             id            ││             id            ││             id            │
│  sdb_inverted_index_score ││  sdb_inverted_index_score ││  sdb_inverted_index_score ││  sdb_inverted_index_score │
│                           ││                           ││                           ││                           │
│          ~36 rows         ││          ~36 rows         ││          ~36 rows         ││          ~36 rows         │
└───────────────────────────┘└───────────────────────────┘└───────────────────────────┘└───────────────────────────┘


query error
EXPLAIN
select * from (select * from docs_idx)
order by bm25(tableoid) desc
----
db error: ERROR: Referenced column "tableoid" not found in FROM clause!
Candidate bindings: "body"


query
EXPLAIN (
  (SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
UNION ALL
(
  (SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id, BM25(docs_idx.tableoid) as score FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
ORDER BY score
LIMIT 6;
----
QUERY PLAN
┌───────────────────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 6          │
│    Order By: score ASC    │
│                           │
│          ~6 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│           UNION           ├──────────────┬────────────────────────────┬────────────────────────────┐
└─────────────┬─────────────┘              │                            │                            │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│      STREAMING_LIMIT      ││      STREAMING_LIMIT      ││      STREAMING_LIMIT      ││      STREAMING_LIMIT      │
│    ────────────────────   ││    ────────────────────   ││    ────────────────────   ││    ────────────────────   │
│          Limit: 2         ││          Limit: 2         ││          Limit: 2         ││          Limit: 2         │
│                           ││                           ││                           ││                           │
│          ~2 rows          ││          ~2 rows          ││          ~2 rows          ││          ~2 rows          │
└─────────────┬─────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      │
│    ────────────────────   ││    ────────────────────   ││    ────────────────────   ││    ────────────────────   │
│        Table: docs        ││        Table: docs        ││        Table: docs        ││        Table: docs        │
│                           ││                           ││                           ││                           │
│       Materializer:       ││       Materializer:       ││       Materializer:       ││       Materializer:       │
│    rocksdb (point Get)    ││    rocksdb (point Get)    ││    rocksdb (point Get)    ││    rocksdb (point Get)    │
│                           ││                           ││                           ││                           │
│          Filter:          ││          Filter:          ││          Filter:          ││          Filter:          │
│ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   ││   <Term:lazy(0, 0); >]]   ││    <Term:fox(0, 0); >]]   ││   <Term:lazy(0, 0); >]]   │
│                           ││                           ││                           ││                           │
│           Score:          ││           Score:          ││           Score:          ││           Score:          │
│    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   ││    bm25(k1=1.2, b=0.75)   │
│                           ││                           ││                           ││                           │
│        Projections:       ││        Projections:       ││        Projections:       ││        Projections:       │
│             id            ││             id            ││             id            ││             id            │
│  sdb_inverted_index_score ││  sdb_inverted_index_score ││  sdb_inverted_index_score ││  sdb_inverted_index_score │
│                           ││                           ││                           ││                           │
│          ~36 rows         ││          ~36 rows         ││          ~36 rows         ││          ~36 rows         │
└───────────────────────────┘└───────────────────────────┘└───────────────────────────┘└───────────────────────────┘



query error
EXPLAIN (
  (SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
UNION ALL
(
  (SELECT id FROM docs_idx WHERE PHRASE(body, 'fox') LIMIT 2)
  UNION ALL
  (SELECT id FROM docs_idx WHERE PHRASE(body, 'lazy') LIMIT 2)
)
ORDER BY BM25(docs_idx.tableoid)
LIMIT 6;
----
db error: ERROR: Could not ORDER BY column "bm25(<slt:ignore>)": add the expression/function to every SELECT, or move the UNION into a FROM clause.


statement ok
DROP TABLE docs;


# Large dataset: more docs than velox batch size (1024) exercise multi-batch path
statement ok
CREATE TABLE bigdocs (id INTEGER PRIMARY KEY, body VARCHAR);


statement ok
CREATE INDEX bigdocs_idx ON bigdocs USING inverted(id, body en);


statement ok
INSERT INTO bigdocs SELECT i, 'fox' FROM generate_series(1, 1100) AS s(i);


statement ok
VACUUM (UPDATE_INDEXES) bigdocs;


# All 1100 docs match 'fox'; count exercises multi-batch materializer path
query
SELECT COUNT(*) FROM bigdocs_idx WHERE PHRASE(body, 'fox');
----
count
1100


# BM25 scores valid across >1024 docs (multiple velox batches)
query
SELECT COUNT(*) FROM bigdocs_idx WHERE PHRASE(body, 'fox') AND BM25(bigdocs_idx.tableoid) > 0;
----
count
1100


# Ordering across batches is stable
query
SELECT id FROM bigdocs_idx WHERE PHRASE(body, 'fox') ORDER BY id LIMIT 3;
----
id
1
2
3


query
SELECT id FROM bigdocs_idx WHERE PHRASE(body, 'fox') ORDER BY id DESC LIMIT 3;
----
id
1100
1099
1098


statement ok
DROP TABLE bigdocs;


statement ok
CREATE TABLE boost_docs (id INTEGER PRIMARY KEY, body VARCHAR);


statement ok
CREATE TEXT SEARCH DICTIONARY boost_en(
    template = 'text',
    locale = 'en_US.UTF-8',
    case = 'none',
    stemming = false,
    accent = false,
    frequency = true,
    position = true,
    norm = true
);


statement ok
CREATE INDEX boost_docs_idx ON boost_docs USING inverted(id, body boost_en);


statement count 1
INSERT INTO boost_docs VALUES (1, 'alpha');


statement count 1
INSERT INTO boost_docs VALUES (2, 'beta');


statement ok
VACUUM (UPDATE_INDEXES) boost_docs;


query
SELECT id FROM boost_docs_idx
WHERE BOOST(TERM_EQ(body, 'alpha'), 1000.5) OR TERM_EQ(body, 'beta')
ORDER BY BM25(boost_docs_idx.tableoid) DESC, id;
----
id
1
2


query
SELECT id FROM boost_docs_idx
WHERE TERM_EQ(body, 'alpha') OR BOOST(TERM_EQ(body, 'beta'), 1000.5)
ORDER BY BM25(boost_docs_idx.tableoid) DESC, id;
----
id
2
1


statement ok
DROP TABLE boost_docs;
